--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -8,8 +8,12 @@
 @import "/layout/event";
 @import "/layout/community";
 @import "/layout/co-founders";
+@import "/layout/cofunders";
 @import "/layout/rooms";
 @import "/layout/about";
+@import "/layout/menu";
+@import "/layout/communityPage";
+@import "/layout/form";
 
 *{
   margin: 0;
