--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -5,15 +5,18 @@
 @import "/layout/join_us";
 @import "/layout/community";
 @import "/layout/co-founders";
+@import "/layout/cofunders";
 @import "/layout/about";
-@import "/layout/menu";;
+@import "/layout/menu";
 @import "/layout/contact";
 @import "/layout/agenda";
 @import "/layout/spaces";
 @import "/layout/footer";
-@import "./layout/community_page.scss";
-@import "./layout/cofunders.scss";
-@import "./layout/form.scss";
+@import "/layout/community_page";
+@import "/layout/cofunders";
+@import "/layout/form";
+@import "/layout/rooms";
+@import "/layout/hamburger";
 
 *{
   margin: 0;
